<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF056C9A"
    tools:context=".Apartment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF056C9A"
        android:orientation="vertical">

        <TextView
            style="@style/head"
            android:text="@string/ApartText"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF056C9A"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/imgapart1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <TextView
                    style="@style/hometext"
                    android:paddingBottom="10dp"
                    android:text="@string/addApart"
                    android:textColor="#FFFFFF" />

                <TextView
                    style="@style/hometext"
                    android:paddingBottom="10dp"
                    android:text="@string/AppCity"
                    android:textColor="#FFFFFF" />

                <TextView
                    style="@style/hometext"
                    android:text="@string/AppPrice"
                    android:textColor="#FFFFFF" />
                <TextView
                    style="@style/hometext"
                    android:text="@string/AppDes"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/chkApartHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="50dp"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF056C9A"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/imgapart2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <TextView
                    style="@style/hometext"
                    android:paddingBottom="10dp"
                    android:text="@string/addApart2"
                    android:textColor="#FFFFFF" />

                <TextView
                    style="@style/hometext"
                    android:paddingBottom="10dp"
                    android:text="@string/AppCity2"
                    android:textColor="#FFFFFF" />

                <TextView
                    style="@style/hometext"
                    android:text="@string/AppPrice2"
                    android:textColor="#FFFFFF" />

                <TextView
                    style="@style/hometext"
                    android:text="@string/AppDes2"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/chkApartHome2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="50dp"
                android:paddingBottom="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF056C9A"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/imgapart3" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <TextView
                    style="@style/hometext"
                    android:paddingBottom="10dp"
                    android:text="@string/addApart3"
                    android:textColor="#FFFFFF" />

                <TextView
                    style="@style/hometext"
                    android:paddingBottom="10dp"
                    android:text="string/AppCity3"
                    android:textColor="#FFFFFF" />

                <TextView
                    style="@style/hometext"
                    android:text="string/AppPrice3"
                    android:textColor="#FFFFFF" />

                <TextView
                    style="@style/hometext"
                    android:text="@string/AppDes3"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/chkApart3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="50dp"
                android:paddingBottom="10dp" />

        </LinearLayout>


        <Button
            android:id="@+id/BtnApart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:paddingLeft="50dp"
            android:text="NEXT"
            android:textSize="24sp" />


    </LinearLayout>

</ScrollView>
